refactor(clouddrive):优化文件下载路径检查逻辑
- 使用更具可读性的方式检查和设置文件路径
- 替换原有的索引访问为更直观的 getFirst() 方法